Tues, 14 March 2006 Daniel R. Fisher
1. Added two classes, QMCElectronNucleusCusp and
   QMCElectronNucleusCuspParameters, which replace Gaussian orbitals
   with exponential functions near the nuclei.  The replacement
   functions satisfy the electron nucleus cusp conditions and match
   the value and first and second derivatives of the original orbital
   at the radius of correction.  To use this feature, set the flag
   replace_electron_nucleus_cusps to 1 and set all the electron
   nucleus Jastrow types to "None."

Mon, 13 Mar 2006 Chip Kent
1. Fixed a bug in the MPI type created for Stopwatch.  MPI_LONG_INT
   is a struct containing a long and and int not a long int.  This was
   changed to MPI_LONG which is a long int.

2. Changed a strcpy to strncpy in QMCManager::sendAllProcessorsInputFileName
   to avoid any chance of stack crashing attacks using QMcBeaver.

3. Added support for Open-MPI.

4. Fixed a bug in Stopwatch.h which prevented the file from building
   properly on Linux.

5. Disabled long double warning messages from GCC.

Mon, 16 Jan 2006 Amos Anderson
I committed many changes that I had made over the last several months.
1. QMCRun now keeps one copy of QMCFunctions, meaning that QMCWalker's
   initializeWalkerPosition does not have to create one. This is simply
   to save a bit of memory...

2. I added the NaN check x+1==x to IeeeMath, and modified QMCWalker to
   reflect this.
   
3. I added the GPUQMCJastrowElectronElectron class that I had written. To
   program this, I had to modify the abstract QMCCorrelationFunction class
   to force all correlation function classes to allow other classes to query
   the polynomial coefficients. The JuliusCorrelationFunction is not compatible
   with what I've programmed. Changes were made to QMCJastrow.
   
4. I changed Array2D so that many of its functions are now in a separate file
   called Array2D.cpp. I also modified it so that it itself computes the inverse
   and determinant.
   